# ltcg-agent

./: .env.example  .gitignore  ARTICLE.md  CLAUDE.md  CONTRIBUTORS.md  README.md  pyproject.toml
data/rules/: it_act_capital_gains.txt
evals/: conftest.py  golden_scenarios.yaml  test_golden_scenarios.py  test_opportunities.py  test_rag.py
ltcg_agent/: __init__.py  __main__.py
ltcg_agent/engine/: __init__.py  escalation.py  gains.py  harvesting.py  lot_matcher.py  ltcg.py  opportunities.py
ltcg_agent/fx/: __init__.py  cache.py  sbi_ttbr.py  store.py  types.py
ltcg_agent/fx/data/: seed_rates.csv
ltcg_agent/ingest/: __init__.py  base.py  csv_adapter.py  ibkr.py  llm_normalizer.py  schwab.py
ltcg_agent/models/: __init__.py  escalation.py  instrument.py  lot.py  money.py  portfolio.py  provenance.py  tax.py
ltcg_agent/orchestrator/: __init__.py  graph.py
ltcg_agent/rag/: __init__.py  corpus.py  explainer.py  freshness.py  index.py  retriever.py  seed_corpus.jsonl
ltcg_agent/report/: __init__.py  generator.py
ltcg_agent/rules/: __init__.py  loader.py
ltcg_agent/rules/configs/: fy2324.yaml  fy2425.yaml  fy2526.yaml
tests/: test_escalation.py  test_fx.py  test_ingest_csv.py  test_ingest_schwab.py  test_lot_matcher.py  test_money.py  test_rules.py  test_rules_loader.py  test_tax_engine.py
tests/fixtures/: schwab_sample.csv  statement.csv  statement_extra_col.csv  statement_missing_col.csv
