[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ltcg-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "langgraph>=0.1",
    "faiss-cpu>=1.8",
    "openai>=1.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "rich>=13.0",
    "openpyxl>=3.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml",
    "types-python-dateutil",
]

[project.scripts]
ltcg = "ltcg_agent.__main__:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ltcg_agent"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "evals"]
addopts = "--cov=ltcg_agent --cov-report=term-missing"

[tool.coverage.run]
branch = true

[tool.hatch.build.targets.wheel]
packages = ["ltcg_agent"]
